# whisper-typing

./: .gitignore  AGENTS.md  BACKEND_IMPLEMENTATION.md  DOCKER.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  config.json  docker-compose.yml  mise.toml  pyproject.toml
.github/workflows/: build.yaml
backend/: __init__.py  server.py
backend/api/: __init__.py  config.proto  config_pb2.py  config_pb2_grpc.py  config_service.py  health_pb2.py  health_pb2_grpc.py  health_service.py  transcription_pb2.py  transcription_pb2_grpc.py  transcription_service.py
backend/core/: __init__.py
backend/web/: __init__.py  app.py
backend/web/static/: index.html
docker/: entrypoint.sh
mobile/: .gitignore  README.md  SETUP.md  TESTING.md  USER_GUIDE.md  generate_proto.ps1  generate_proto.sh  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/lib/: main.dart
mobile/lib/screens/: home_screen.dart  onboarding_screen.dart  settings_screen.dart  splash_screen.dart
mobile/lib/services/: audio_service.dart  grpc_service.dart
mobile/proto/: health.proto  transcription.proto
src/whisper_typing/: __main__.py  ai_improver.py  app_controller.py  audio_capture.py  constants.py  ollama_transcriber.py  transcriber.py  typer.py  window_manager.py
src/whisper_typing/tui/: __init__.py  app.py  screens.py
tests/: test_ai_improver.py  test_app_controller.py  test_audio_capture.py  test_constants.py  test_ollama_transcriber.py  test_transcriber.py  test_typer.py  test_window_manager.py
